# ML_projects

./: ML_Store_Sales.ipynb  README.md  pyproject.toml
ML_Store_Sales/: ML_Store_Sales.ipynb  train_csv_is_too_big_for_import.txt
football_player_valuations/: ETL.ipynb  Scraping_FBREF.ipynb
player_valuations/: ETL.ipynb
titanic_spaceship/: sk_models.py  titanic_spaceship.ipynb
