[tool.poetry]
name = "ml-projects"
version = "0.1.0"
description = ""
authors = ["Niklas <niklaskoenigsdorff@icloud.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
